// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonComponent should match previous snapshot 1`] = `
<styled.input
  disabled={false}
  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
  fontSize=".778rem"
  fontWeight={400}
  id="inp"
  letterSpacing={0.32}
  lineHeight="1.125em"
  placeholder=""
  type="text"
/>
`;

exports[`RadioButtonComponent should match previous snapshot for disabled state 1`] = `
<styled.input
  border="solid 1px #707070"
  disabled={true}
  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
  fontSize=".778rem"
  fontWeight={400}
  id="inp"
  letterSpacing={0.32}
  lineHeight="1.125em"
  placeholder=""
  type="text"
/>
`;

exports[`RadioButtonComponent should match previous snapshot for input with custom placeholder 1`] = `
<styled.input
  disabled={false}
  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
  fontSize=".778rem"
  fontWeight={400}
  id="inp"
  letterSpacing={0.32}
  lineHeight="1.125em"
  placeholder="Enter details here"
  type="text"
/>
`;

exports[`RadioButtonComponent should match previous snapshot for input with specified type 1`] = `
<styled.input
  disabled={false}
  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
  fontSize=".778rem"
  fontWeight={400}
  id="inp"
  letterSpacing={0.32}
  lineHeight="1.125em"
  placeholder=""
  type="password"
/>
`;

exports[`RadioButtonComponent should match previous snapshot for input with validation error 1`] = `
<styled.input
  border="solid 1px red"
  disabled={false}
  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
  fontSize=".778rem"
  fontWeight={400}
  id="inp"
  letterSpacing={0.32}
  lineHeight="1.125em"
  placeholder=""
  type="text"
/>
`;
